tests/negative/neg_pr117_uppercase_builtin_type.safe
-- Test: neg_pr117_uppercase_builtin_type
-- Description: Predefined type names must use canonical lowercase spelling.
-- Expected: REJECT source_frontend_error

package neg_pr117_uppercase_builtin_type

   function demo returns Integer
      value : Integer = 1;

      return value;
